# veriscope

./: .dockerignore  .gitignore  AGENTS.md  Agents.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CORPORATE_CLA.md  DCO.txt  Dockerfile.gpt  GOVERNANCE.md  INDIVIDUAL_CLA.md  LICENSE  NOTICE.md  README.md  RELEASE_PROCESS.md  SECURITY.md  TRADEMARK.md  pyproject.toml  pytest.ini  veriscope.py
.github/workflows/: ci.yml  gc-weekly.yml  hf-ddp-gpu-pilot.yml
docs/: INDEX.md  audit_core_20260212.md  calibration_protocol_v0.md  contract_audit_pilot_honesty_2026-02-09.md  contract_v1.md  distributed_mode.md  incubation_readiness.md  index.html  maintenance_gc.md  migration_invariants.md  productization.md  quickstart_gpt_pilot.md  whitepaper_v0.md
docs/examples/: README.md  calibration_report_v0.example.json
docs/examples/reviewer_packet/: diff_run_a_vs_run_b.txt  report_run_a.txt  validate_run_a.txt
docs/examples/reviewer_packet/run_a/: governance_log.jsonl  results.json  results_summary.json  run_config_resolved.json  window_signature.json
docs/examples/reviewer_packet/run_b/: governance_log.jsonl  results.json  results_summary.json  run_config_resolved.json
docs/pilot/: README.md  faq.md  one_pager.md
scar_bundle_phase4/: PHASE_TAG.txt  window_provenance.json
scripts/: Dockerfile.acceptance  audit_gate_invariants.py  audit_governance_alignment.py  ddp_smoke_minimal.py  fake_gpt_runner.py  fake_hf_runner.py  phase5a_manual_verify.sh  phase5c_verify.sh  run_cifar_smoke.sh  run_container_acceptance.sh  run_gpt_smoke.sh  run_hf_ddp_smoke.sh  run_hf_micro_smoke.sh  run_hf_smoke.sh  run_smoke_ddp.sh
scripts/agent/: check.sh  fixit.md  setup.sh
scripts/pilot/: README.md  negative_controls.sh  run.sh  run_hf_ddp.sh  score.py
tests/: conftest.py  test_artifacts_roundtrip.py  test_calibrate_from_run.py  test_calibrate_regime_from_run.py  test_calibration.py  test_calibration_recorder.py  test_cli_calibrate.py  test_cli_calibrate_from_run.py  test_cli_calibrate_regime_from_run.py  test_cli_diff.py  test_cli_import_boundary.py  test_cli_inspect.py  test_cli_run_cifar_wrapper.py  test_cli_run_gpt_wrapper.py  test_cli_run_hf_wrapper.py  test_cli_sanitizer.py  test_cli_validate_report.py  test_convenience_logger.py  test_core_emit.py  test_ddp_safety_rails.py  test_ddp_smoke_integration.py  test_distributed_mode_contract.py  test_docs_links.py  test_emitter_contract_cli_acceptance.py  test_evidence.py  test_file_modes.py  test_gate.py  test_gate_session.py  test_governance_contract.py  test_gpt_artifact_emission.py  test_gpt_forwarded_runner_args.py  test_gpt_train_gate_validation.py  test_hf_ddp_smoke_cpu.py  test_hf_emitter_parity.py  test_hf_micro_smoke_integration.py  test_ipm.py  test_jsonutil_atomic_write.py  test_jsonutil_canonical_hash.py  test_markdown_fences.py  test_phase5c_diff_json_parse.py  (+11 more)
tests/data/: hf_micro_smoke.txt
veriscope/: __init__.py  cli.py  config.py  fr_integration.py  pipeline.py  step_logging.py
veriscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
veriscope/cli/: __init__.py  calibrate.py  calibrate_from_run.py  calibrate_regime_from_run.py  comparability.py  diff.py  governance.py  main.py  override.py  report.py  validate.py
veriscope/configs/: phase4_cifar10_v0.1.0.json
veriscope/core/: __init__.py  _coerce.py  artifacts.py  assemble.py  calibration.py  calibration_recorder.py  convenience_logger.py  ddp.py  emit.py  evidence.py  gate.py  gate_session.py  governance.py  ipm.py  jsonutil.py  lifecycle.py  pilot_calibration.py  redaction_policy.py  regime.py  transport.py  window.py
veriscope/detectors/: __init__.py  baselines.py  learned.py
veriscope/runners/: legacy_cli.py  legacy_cli_refactor.py  seed_policy.py
veriscope/runners/gpt/: adapter.py  analyze_gates.py  emit_artifacts.py  gate_semantics.py  train_nanogpt.py
veriscope/runners/hf/: __init__.py  adapter.py  emit_artifacts.py  train_hf.py
veriscope/runners/legacy/: budget.py  data.py  determinism.py  features.py  gate_legacy.py  metrics_heavy.py  model.py  monitors.py  probes.py  runtime.py  types.py  utils.py
veriscope/runners/legacy/detectors/: baselines.py  learned.py
veriscope/runners/legacy/eval/: __init__.py  core.py  eval.py
