[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriscope"
version = "0.1.1"
description = "Veriscope Bundle (Phase-4): early warning of soft collapse with finite-realism gate and learned detector"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Phase Catalyst" }]
dependencies = [
  "numpy>=1.20",
  "pandas>=1.2",
  "matplotlib>=3.4",
  "filelock>=3.12",
]
# Prefer users install the correct CUDA/CPU wheel for torch themselves.
# Document this in README: `pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121`

[project.optional-dependencies]
topology = ["ripser>=0.6"]

[project.scripts]
veriscope = "veriscope.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
veriscope = ["configs/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["veriscope*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"veriscope/cli.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["cli.py"]
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true

ignore_missing_imports = true
follow_imports = "silent"
implicit_reexport = true
allow_redefinition = true
namespace_packages = true

disable_error_code = [
  "call-overload",
  "arg-type",
  "assignment",
  "operator",
  "index",
  "return-value",
  "var-annotated",
]

exclude = ["__main__\\.py$"]