[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veriscope"
version = "0.1.0"
description = "Finite-window early warning and gating (refactor)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{name = "Craig Holmander"}]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "matplotlib>=3.5",
  "filelock>=3.7",
  "pyarrow>=14.0",
  "pydantic>=2.0,<3",
  "torch>=2.1",
  "torchvision>=0.16",
]
classifiers = ["License :: Other/Proprietary License"]

[project.optional-dependencies]
topo = ["ripser>=0.6.4"]

[project.scripts]  
veriscope = "veriscope.cli.main:main"  
veriscope-legacy = "veriscope.fr_integration:main"  

[tool.setuptools.packages.find]
include = ["veriscope*"]

[tool.ruff]
line-length = 120
lint.ignore = ["E501", "E701", "E702", "E731", "E402"]


[tool.mypy]
python_version = "3.10"
files = ["veriscope"]

# Keep third‑party libraries from exploding the error count while we type
# our own code strictly. We’ll re-tighten after the hot spots are fixed.
ignore_missing_imports = true
follow_imports = "skip"

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false


[[tool.mypy.overrides]]
module = ["veriscope.runners.legacy_cli"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
# Trim the long tail while we refactor this file:
disable_error_code = [
  "unused-ignore",
  "valid-type",
  "no-redef",
  "has-type",
  "var-annotated",
]
